syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetingRequest {
  Greeting greeting = 1;
}

message GreetingResponse {
  string  result = 1;
}

// GreetingManyTimesRequest is a message type that contains a single string field 'greeting'
message GreetingManyTimesRequest {
  string greeting = 1;
}

// GreetingManyTimesResponse is a message type that contains a single string field 'result'
message GreetingManyTimesResponse {
  string result = 1;
}

// GreetService is a gRPC service that defines two methods: Greet and GreetManyTimes
service GreetService {
  // Greet is a unary gRPC method that takes a GreetingRequest and returns a GreetingResponse
  rpc Greet (GreetingRequest) returns (GreetingResponse) {};

  // GreetManyTimes is a server-streaming gRPC method that takes a GreetingManyTimesRequest
  // and returns a stream of GreetingManyTimesResponse messages
  rpc GreetManyTimes (GreetingManyTimesRequest) returns (stream GreetingManyTimesResponse) {};
}
